--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,7 @@ dependencies {
     implementation 'com.jpardogo.googleprogressbar:library:1.2.0'
     implementation 'com.github.castorflex.smoothprogressbar:library:1.1.0'
     implementation 'com.wang.avi:library:2.1.3'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
 }
