--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     implementation 'com.wang.avi:library:2.1.3'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 
 }
